# dglab-audio-link

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
.github/workflows/: nightly-release.yml
crates/dglab-socket-protocol/: Cargo.toml  README.md
crates/dglab-socket-protocol/src/: channel.rs  lib.rs  protocol.rs  server.rs
src/: main.rs  types.rs
src/app/: gui.rs  i18n.rs  logs.rs  mod.rs  scenes.rs  settings.rs  state.rs
src/audio/: analyzer.rs  capture.rs  mapper.rs  mod.rs  windows_endpoints.rs  windows_loopback.rs
src/dglab/: pairing.rs  protocol.rs  server.rs
src/domain/: mod.rs  types.rs
src/pipeline/: engine.rs
src/signal/: mapper.rs
