[package]
name = "dglab_audio_link"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.30", default-features = true }
egui = "0.30"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
qrcodegen = "1.8"
uuid = { version = "1.11", features = ["v4"] }
cpal = "0.17"
rustfft = "6"
