[workspace]
members = ["crates/dglab-socket-protocol"]
resolver = "2"

[package]
name = "dglab_audio_link"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dglab-socket-protocol = { path = "crates/dglab-socket-protocol", version = "0.1.0" }
eframe = { version = "0.30", default-features = true }
egui = "0.30"
egui_plot = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
qrcodegen = "1.8"
cpal = "0.17"
rfd = "0.15"
rustfft = "6"
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
