[package]
name = "dglab-socket-protocol"
version = "0.1.0"
edition = "2024"
description = "DG-LAB 3.0 websocket pairing and message protocol helpers"
repository = "https://github.com/imkiva/dglab-audio-link"
readme = "README.md"
keywords = ["dglab", "websocket", "protocol", "qr"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "sync", "time", "macros"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
